# edu

./: .gitmodules  .pre-commit-config.yaml  1.dio  pyproject.toml  requirements.txt
Mastering-Pandas-for-Finance/Chapter01/: 01 Getting started with pandas.nbconvert.ipynb
Mastering-Pandas-for-Finance/Chapter02/: 02_The_pandas_Series_and_DataFrame.nbconvert.ipynb
Mastering-Pandas-for-Finance/Chapter03/: 03_Reshaping.nbconvert.ipynb
Mastering-Pandas-for-Finance/Chapter04/: 04_Time_Series.nbconvert.ipynb
Mastering-Pandas-for-Finance/Chapter05/: 05_Historical_Stock_Data.nbconvert.ipynb
Mastering-Pandas-for-Finance/Chapter07/: 07_Algorithmic_Trading.nbconvert.ipynb
Mastering-Pandas-for-Finance/Chapter08/: 08_Options.nbconvert.ipynb
Mastering-Pandas-for-Finance/Chapter09/: 09_Portfolios.nbconvert.ipynb
Mastering-Pandas-for-Finance/Misc/: 02_The_pandas_Series_and_DataFrame.nbconvert.ipynb  03_Reshaping.nbconvert.ipynb  04_Time_Series.nbconvert.ipynb  06_Trading_Using_Google_Trends (1).nbconvert.ipynb
airflow/: Readme.md
airflow/dags/: mansour_bash_operator.py
async/example/: micro_events.py
design-pattern/: Readme.md
fastapi/fargate/: Dockerfile  (+2 more)
google-sheet/: gl.js
latex/: .gitignore  Readme.md
leet-code/: 02.py
neo4j-python/: README.md
others/: __call__.py  abstract.py  namespace.py
projects/: word_cloud.py
python/pypi/mansour-utils/: Readme.rst  pyproject.toml  setup.py
python/pypi/mansour-utils/src/mansour_utils/: timer.py
submaker/: main.py
terraform/: .gitignore  Readme.md  main.tf
threading/: thread.py
tmp/: word_cloud.py
(+560 files in other folders)
